--- a/index.html
+++ b/index.html
@@ -26,32 +26,32 @@
 					<tr>
 						<th>Nama</th>
 						<th>:</th>
-						<td></td>
+						<td>refor</td>
 					</tr>
 					<tr>
 						<th>Tempat, Tgl.Lahir</th>
 						<th>:</th>
-						<td></td>
+						<td>dahanahilimbewe 17mei2006</td>
 					</tr>
 					<tr>
 						<th>Agama</th>
 						<th>:</th>
-						<td></td>
+						<td >kristen</td>
 					</tr>
 					<tr>
 						<th>Alamat</th>
 						<th>:</th>
-						<td></td>
+						<td>tetehosisorewi</td>
 					</tr>
 					<tr>
 						<th>Email</th>
 						<th>:</th>
-						<td></td>
+						<td>reforberkatjayazalukhu@gmail.com</td>
 					</tr>
 					<tr>
 						<th>No.HP</th>
 						<th>:</th>
-						<td></td>
+						<td>082319877418</td>
 					</tr>
 				</table>
 				
@@ -65,9 +65,9 @@
 			
 			<div>
 				<ul>
-					<li><b>2000 - 2006</b> SD </li>
-					<li><b>2006 - 2009</b> SMP</li>
-					<li><b>2009 - 2012</b> SMK </li>
+					<li><b>2000 - 2013</b> SD </li>
+					<li><b>2006 - 2019</b> SMP</li>
+					<li><b>2009 - 2022</b> SMK </li>
 				</ul>
 			</div>
  
