--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<h2>Informasi</h2>			
 			
 			<div class="kiri">
-				<img src="foto.jpg">				
+				<img src="IMG-20250214-WA0008.jpg">				
 			</div>
  
 			<div class="kanan">
