--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<h2>Informasi</h2>			
 			
 			<div class="kiri">
-				<img src="IMG_20250212_113639.jpg">				
+				<img src="IMG-20250209-WA0164.jpg">				
 			</div>
  
 			<div class="kanan">
