--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
 			<div>
 				<ul>
 					<li>
-						<b>2017 - 2019</b> - <i>Back-End Developer</i> - di Di PT. Teknologi Indonesia
+						<b>2024 - 2025</b> - <i>praktek kerja lapangan</i> - di Di Dinas Pendidikan Nisut
 					</li>
 					<li>
-						<b>2020 - Now</b> - <i>Full Stack Developer</i> - di Di PT. BOX Tech AI Indonesia
+						<b>2024 - Now</b> - <i>fresgraduate</i> - di Di PT. BOX Tech AI Indonesia
 					</li>
 				</ul>
 			</div>
  
 		</div>
  
-		<div class="blok">
+		<div class="XII">
  
-			<h2>Keahlian</h2>			
+			<h2>Teknik Komputer dan Jaringan</h2>			
 			
 			<div>
 				<ul>
