--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<tr>
 						<th>Nama</th>
 						<th>:</th>
-						<td>refor</td>
+						<td>Refor Berkat Jaya Zalukhu</td>
 					</tr>
 					<tr>
 						<th>Tempat, Tgl.Lahir</th>
