--- a/index.html
+++ b/index.html
@@ -108,12 +108,12 @@
 			
 			<div>
 				<ul>
-					<li>HTML</li>
-					<li>CSS</li>
-					<li>JavaScript</li>
-					<li>PHP</li>
-					<li>CodeIgniter</li>
-					<li>Laravel</li>
+					<li>instalasi jaringan</li>
+					<li>instalasi sistem operasi</li>
+					<li>instalasi software</li>
+					<li>admin jaringan</li>
+					<li>membangun web berbasi HTML dan css</li>
+					<li>laravel</li>
 					<li>NodeJS</li>					
 				</ul>
 			</div>
