--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 			
 			<div>
 				<ul>
-					<li><b>2013 - 2019</b> SD </li>
-					<li><b>2019 - 2022</b> SMP</li>
-					<li><b>2022 - 2025</b> SMK </li>
+					<li><b>2013 - 2019</b> SD tetehosi sorewi </li>
+					<li><b>2019 - 2022</b> SMP negeri 4 Lahewa timur </li>
+					<li><b>2022 - 2025</b> SMK negeri 1 Lahewa timur </li>
 				</ul>
 			</div>
  
