--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
 						<th>hobi</th>
 						<th>:</th>
 						<td>bola volly</td>
+					<tr>
+						<th>Media sosial</th>
+						<th>:</th>
+						<td><a href=https://www.facebook.com/photo.php?fbid=512924824547802&set=a.104005978773024&type=3&mibextid=KUEnY6CBM2sLossttd>
 						</tr>
 				</tr>
 				</table>
