--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
 					<tr>
 						<th>Media sosial</th>
 						<th>:</th>
-						<td><a href=https://www.facebook.com/photo.php?fbid=512924824547802&set=a.104005978773024&type=3&mibextid=KUEnY6CBM2sLossttd>
+						<td><a href=https://www.facebook.com/photo.php?fbid=512924824547802&set=a.104005978773024&type=3&mibextid=KUEnY6CBM2sLossttd">Fecebook</td>
+					</tr>
 						</tr>
 				</tr>
 				</table>
