--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  
 		<div class="blok">
  
-			<h2>Informasi</h2>			
+			<h2><marquee>Informasi<marquee/h2>			
 			
 			<div class="kiri">
 				<img src="IMG-20250209-WA0164.jpg">				
@@ -81,7 +81,7 @@
  
 		<div class="blok">
  
-			<h2>Pendidikan</h2>			
+			<h2><marquee>Pendidikan</marquee>/h2>			
 			
 			<div>
 				<ul>
@@ -95,15 +95,15 @@
  
 		<div class="blok">
  
-			<h2>Pengalaman Kerja</h2>
+			<h2><marquee>Pengalaman Kerja<marquee/h2>
 			
 			<div>
 				<ul>
 					<li>
-						<b>2024 - 2025</b> - <i>praktek kerja lapangan</i> - di Di Dinas Pendidikan Nisut
+						<b>2023 - 2024</b> - <i>Praktek Kerja Lapangan</i> - DI DINAS PENDIDIKAN Kab. NIAS UTARA
 					</li>
 					<li>
-						<b>2024 - Now</b> - <i>fresgraduate</i> - di Di PT. BOX Tech AI Indonesia
+						<b>2024 - Now</b> - <i>Fresgaduate</i> - DI SMK NEGERI I LAHEWA TIMUR
 					</li>
 				</ul>
 			</div>
@@ -112,7 +112,7 @@
  
 		<div class="XII">
  
-			<h2>Teknik Komputer dan Jaringan</h2>			
+			<h2><marquee>Teknik Komputer dan Jaringan<marquee/h2>			
 			
 			<div>
 				<ul>
