--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  
 		<div class="blok">
  
-			<h2><marquee>Informasi<marquee/h2>			
+			<h2><marquee>Informasi</marquee></h2>			
 			
 			<div class="kiri">
 				<img src="IMG-20250209-WA0164.jpg">				
@@ -95,7 +95,7 @@
  
 		<div class="blok">
  
-			<h2><marquee>Pengalaman Kerja<marquee/h2>
+			<h2><marquee>Pengalaman Kerja</marquee></h2>
 			
 			<div>
 				<ul>
@@ -112,7 +112,7 @@
  
 		<div class="XII">
  
-			<h2><marquee>Teknik Komputer dan Jaringan<marquee/h2>			
+			<h2><marquee>Teknik Komputer dan Jaringan</marquee></h2>			
 			
 			<div>
 				<ul>
