--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
  
 		<div class="blok">
  
-			<h2><marquee>Pendidikan</marquee>/h2>			
+			<h2><marquee>Pendidikan</marquee></h2>			
 			
 			<div>
 				<ul>
