--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<tr>
 						<th>Media sosial</th>
 						<th>:</th>
-						<td><a href=https://www.facebook.com/photo.php?fbid=512924824547802&set=a.104005978773024&type=3&mibextid=KUEnY6CBM2sLossttd">Fecebook</td><a href="">Facebook</a>| <a href="https://www.tiktok.com/@refor.zalukhu?_t=ZS-8uE6ssDeKgy&_r=1">Tiktok</a>
+						<td><a href=https://www.facebook.com/share/18YEekrjQC">FACEBOOK<a/></td><a href="">Facebook</a>| <a href="https://www.tiktok.com/@refor.zalukhu?_t=ZS-8uE6ssDeKgy&_r=1">Tiktok</a>
 					</tr>
 						</tr>
 				</tr>
