--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<tr>
 						<th>Media sosial</th>
 						<th>:</th>
-						<td><a href=https://www.facebook.com/share/18YEekrjQC">FACEBOOK<a/></td><a href="">Facebook</a>| <a href="https://www.tiktok.com/@refor.zalukhu?_t=ZS-8uE6ssDeKgy&_r=1">Tiktok</a>
+						<td><a href=https://www.facebook.com/share/18YEekrjQC">FACEBOOK<a/></td><a href="https://www.instagram.com/reforzalukhu?igsh=cGlzYXZrdmRkeG04">INSTAGRAM</a>| <a href="https://www.tiktok.com/@refor.zalukhu?_t=ZS-8uE6ssDeKgy&_r=1">Tiktok</a>
 					</tr>
 						</tr>
 				</tr>
